Adjust how the website renders, make localscan a dropdown, fix unaligned->null, make plots more usable

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -6,6 +6,10 @@ body
 	padding: 50px
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
+.wider-dropdown
+	width: 300px
+	padding: 10px
+
 .navbar-inner
 	background-color: #345566
 
